<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.travelfoodie.feature.trip.MapFragment"
        android:label="@string/nav_map" />

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.travelfoodie.feature.trip.TripListFragment"
        android:label="@string/nav_trips" />

    <fragment
        android:id="@+id/nav_attractions"
        android:name="com.travelfoodie.feature.attraction.AttractionListFragment"
        android:label="@string/nav_attractions" />

    <fragment
        android:id="@+id/nav_restaurants"
        android:name="com.travelfoodie.feature.restaurant.RestaurantListFragment"
        android:label="@string/nav_restaurants" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.travelfoodie.ProfileFragment"
        android:label="@string/nav_profile">
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_profile_to_travel_companion"
            app:destination="@id/travelCompanionFragment" />
        <action
            android:id="@+id/action_profile_to_team_chat"
            app:destination="@id/board_nav_graph" />
        <action
            android:id="@+id/action_profile_to_voice_memo"
            app:destination="@id/voice_nav_graph" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.travelfoodie.LoginFragment"
        android:label="로그인" />

    <fragment
        android:id="@+id/travelCompanionFragment"
        android:name="com.travelfoodie.TravelCompanionFragment"
        android:label="여행 동반자">
        <action
            android:id="@+id/action_travel_companion_to_chat_rooms"
            app:destination="@id/board_nav_graph" />
    </fragment>

    <include app:graph="@navigation/board_nav_graph" />
    <include app:graph="@navigation/voice_nav_graph" />

</navigation>
